--- a/exchange_station/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
+++ b/exchange_station/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
@@ -767,6 +767,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
             </File>
+            <File>
+              <FileName>arm.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\arm.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
