feature: 新增MIT协议电机驱动程序
1. 重构HT04电机驱动为MIT协议电机驱动，将电调相关参数改为成员变量

test
1. HT04电机、8112电机反馈、控制测试完成

--- a/engineer/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
+++ b/engineer/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
@@ -787,6 +787,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\..\base\motor\driver\dji_motor_driver.cpp</FilePath>
             </File>
+            <File>
+              <FileName>mit_motor_driver.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\base\motor\driver\mit_motor_driver.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
