--- a/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
+++ b/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
@@ -902,6 +902,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\..\base\motor\driver\dji_motor_driver.cpp</FilePath>
             </File>
+            <File>
+              <FileName>mit_motor_driver.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\base\motor\driver\mit_motor_driver.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
