feature & to: 添加ui、底盘、云台、气泵、取矿等程序文件，具体程序待细化

--- a/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
+++ b/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
@@ -743,19 +743,9 @@
               <FilePath>..\..\..\app\control.cpp</FilePath>
             </File>
             <File>
-              <FileName>can_monitor.cpp</FileName>
+              <FileName>motor_monitor.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\..\..\app\can_monitor.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>board_comm.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\board_comm.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>serial_tool.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\serial_tool.cpp</FilePath>
+              <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
             </File>
             <File>
               <FileName>imu_monitor.cpp</FileName>
@@ -763,14 +753,44 @@
               <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
             </File>
             <File>
-              <FileName>motor_monitor.cpp</FileName>
+              <FileName>can_monitor.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
+              <FilePath>..\..\..\app\can_monitor.cpp</FilePath>
             </File>
             <File>
               <FileName>arm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\arm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>chassis.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\chassis.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>gimbal.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\gimbal.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>pump.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\pump.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>board_comm.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\board_comm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>client_ui.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\client_ui.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>serial_tool.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\serial_tool.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -916,6 +936,11 @@
               <FileName>referee_comm.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\base\referee_comm\referee_comm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>referee_ui.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\base\referee_comm\referee_ui.cpp</FilePath>
             </File>
           </Files>
         </Group>
