--- a/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
+++ b/engineer/mcu/stm32f407/MDK-ARM/stm32f407.uvprojx
@@ -748,19 +748,14 @@
               <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
             </File>
             <File>
-              <FileName>imu_monitor.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
-            </File>
-            <File>
               <FileName>can_monitor.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\can_monitor.cpp</FilePath>
             </File>
             <File>
-              <FileName>arm.cpp</FileName>
+              <FileName>imu_monitor.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\..\..\app\arm.cpp</FilePath>
+              <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
             </File>
             <File>
               <FileName>chassis.cpp</FileName>
@@ -771,6 +766,16 @@
               <FileName>gimbal.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\gimbal.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>arm.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\arm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>arm_controller.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\arm_controller.cpp</FilePath>
             </File>
             <File>
               <FileName>pump.cpp</FileName>
@@ -791,6 +796,11 @@
               <FileName>serial_tool.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\serial_tool.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>mine.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\mine.cpp</FilePath>
             </File>
           </Files>
         </Group>
