--- a/engineer/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
+++ b/engineer/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F427xx,ARM_MATH_CM4,ARM_MATH_MATRIX_CHECK,ARM_MATH_ROUNDING,__FPU_USED=1U,__FPU_PRESENT=1U</Define>
               <Undefine></Undefine>
-              <IncludePath>..;  ../../..;  ../Inc;  ../Drivers/STM32F4xx_HAL_Driver/Inc;  ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;  ../Middlewares/Third_Party/FreeRTOS/Source/include;  ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;  ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;  ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;  ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;  ../Drivers/CMSIS/Device/ST/STM32F4xx/Include;  ../Drivers/CMSIS/Include</IncludePath>
+              <IncludePath>..;   ../../..;   ../Inc;   ../Drivers/STM32F4xx_HAL_Driver/Inc;   ../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;   ../Middlewares/Third_Party/FreeRTOS/Source/include;   ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;   ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F;   ../Middlewares/ST/STM32_USB_Device_Library/Core/Inc;   ../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc;   ../Drivers/CMSIS/Device/ST/STM32F4xx/Include;   ../Drivers/CMSIS/Include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -743,9 +743,44 @@
               <FilePath>..\..\..\app\control.cpp</FilePath>
             </File>
             <File>
+              <FileName>chassis.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\chassis.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>gimbal.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\gimbal.cpp</FilePath>
+            </File>
+            <File>
               <FileName>can_monitor.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\can_monitor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>motor_monitor.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>imu_monitor.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>arm.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\arm.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>arm_controller.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\arm_controller.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>pump.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\pump.cpp</FilePath>
             </File>
             <File>
               <FileName>board_comm.cpp</FileName>
@@ -758,39 +793,9 @@
               <FilePath>..\..\..\app\serial_tool.cpp</FilePath>
             </File>
             <File>
-              <FileName>imu_monitor.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>motor_monitor.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\motor_monitor.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>arm.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\arm.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>chassis.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\chassis.cpp</FilePath>
-            </File>
-            <File>
               <FileName>client_ui.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\client_ui.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>gimbal.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\gimbal.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>pump.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\pump.cpp</FilePath>
             </File>
           </Files>
         </Group>
