--- a/demo_arm/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
+++ b/demo_arm/mcu/stm32f427/MDK-ARM/stm32f427.uvprojx
@@ -758,6 +758,11 @@
               <FilePath>..\..\..\app\imu_monitor.cpp</FilePath>
             </File>
             <File>
+              <FileName>imu_comm.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\..\app\imu_comm.cpp</FilePath>
+            </File>
+            <File>
               <FileName>chassis.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\chassis.cpp</FilePath>
@@ -781,11 +786,6 @@
               <FileName>pump.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\..\app\pump.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>board_comm.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\..\app\board_comm.cpp</FilePath>
             </File>
             <File>
               <FileName>client_ui.cpp</FileName>
