--- a/controller/.vscode/launch.json
+++ b/controller/.vscode/launch.json
@@ -12,9 +12,13 @@
         "${workspaceRoot}/.config/openocd.cfg"
       ],
       "executable": "${workspaceRoot}/build/RM_frame.elf",
-      // "svdFile": "${workspaceRoot}/mcu/stm32f407/STM32F407.svd",
-      "svdFile": "${workspaceRoot}/mcu/stm32f427/STM32F427.svd",
+      "svdFile": "${workspaceRoot}/mcu/stm32f407/STM32F407.svd",
+      // "svdFile": "${workspaceRoot}/mcu/stm32f427/STM32F427.svd",
       // "preLaunchTask": "build",
+      "liveWatch": {
+        "enabled": true,
+        "samplePerSecond": 10
+      },
     }
   ]
 }
