--- a/demo_arm/.vscode/settings.json
+++ b/demo_arm/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
   "C_Cpp.clang_format_style": "file:${workspaceFolder}/.config/.clang-format",
+  "files.associations": {
+    "cmath": "cpp"
+  },
 }
