--- a/imu/.vscode/launch.json
+++ b/imu/.vscode/launch.json
@@ -15,6 +15,10 @@
       // "svdFile": "${workspaceRoot}/mcu/stm32f407/STM32F407.svd",
       "svdFile": "${workspaceRoot}/mcu/stm32f427/STM32F427.svd",
       // "preLaunchTask": "build",
+      "liveWatch": {
+        "enabled": true,
+        "samplesPerSecond": 10
+      }
     }
   ]
 }
