移植了auto_exchange的源文件和头文件（未测试）

--- a/engineer/CMakeLists.txt
+++ b/engineer/CMakeLists.txt
@@ -63,7 +63,7 @@ add_compile_options(${mcu_compile_options})
 add_link_options(${mcu_link_options})
 
 # library
-file(GLOB_RECURSE libs "lib/*.a")
+file(GLOB_RECURSE libs "lib/*.a" "app/auto_exchange.h" "app/auto_exchange.cpp")
 
 # submodules
 add_subdirectory(base)
